# easy_pc

./: .gitignore  CMakeLists.txt  README.md  c_code_from_ast_plan.md  gdl.gdl  progress_report.md
docs/: GDL_Compiler_Improvements.md  GDL_Language_Description.md
examples/: CMakeLists.txt
examples/arithmetic_parser/: ast_builder.c
examples/code_gen/: CMakeLists.txt  arithmetic_parser_language.gdl  main.c
examples/json_parser/: json_ast_actions.c  json_grammar.c
examples/json_pointer/: CMakeLists.txt  json_pointer.gdl  json_pointer_ast.h  json_pointer_ast_actions.c  json_pointer_ast_actions.h  main.c
examples/simple_calc/: CMakeLists.txt  ast.h  ast_evaluator.c  ast_evaluator.h  function_definitions.c  function_definitions.h  grammar.c  grammar.h  main.c  simple_calc_ast_actions.c  simple_calc_ast_actions.h
include/easy_pc/: easy_pc.h  easy_pc_ast.h
lib/: cpt_printer.c  easy_pc_ast.c  easy_pc_private.h  parsers.c
tests/: ArithmeticParserGeneratorTest.cpp  CMakeLists.txt  CombinatorNewTest.cpp  GdlAstBuilderTest.cpp  GdlParserTest.cpp  GeneratedParserTest.cpp  ParserListTest.cpp  TerminalParsersNewTest.cpp  arithmetic_parser_test_language.gdl
tools/gdl_compiler/: CMakeLists.txt  gdl.gdl  gdl_ast.h  gdl_ast_builder.c  gdl_ast_builder.h  gdl_code_generator.c  gdl_code_generator.h  gdl_compiler_ast_actions.c  gdl_parser.c  gdl_parser.h  main.c  simple_fwd_ref_test_language.gdl  simple_test_language.gdl
tools/gdl_compiler/examples/: simple.gdl
